合并Mini分支